TimeTracking: Fixed alignment and added hover effect to plus button in breadcrumb

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -727,3 +727,9 @@ input[type=number]:focus:not([readonly]){
     border-bottom: none;
     box-shadow: none;
 }
+#main-content h3.with-grid-icons a.plus-add-icon i:hover {
+    color: #09b8e2;
+}
+#main-content h3.with-grid-icons a.plus-add-icon i{
+    padding-bottom: 3px;
+}
